# Kampela-probe

./: README.md
kampela/: Cargo.toml
kampela-system/: Cargo.toml
kampela-system/src/: draw.rs  lib.rs  parallel.rs
kampela-system/src/devices/: display.rs  flash.rs  power.rs  psram.rs  se_aes_gcm.rs
kampela-ui/: Cargo.toml
kampela-ui/src/: lib.rs  uistate.rs
kampela-ui/src/probe/: coordinates.rs  graph.rs  labels.rs  probe.rs
kampela/src/: main.rs  nfc.rs  ui.rs
