[package]
name = "kampela-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-graphics = "0.7.1"
embedded-text = {version = "0.5.0", default-features = false}
kampela-system = { path = "../kampela-system" }
kampela-display-common = { path = "../kampela-display-common" }
lazy_static = { version = "1.4.0", default_features = false }
#ux = { version = "0.1.3", default_features = false }

[features]
embed = ["lazy_static/spin_no_std"]
