[package]
authors = ["Vera Abramova <abramova.vera@gmail.com>"]
edition = "2021"
name = "app"
version = "0.9.2"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.3"
efm32pg23_fix = {path = "../kampela_experiments_efm32pg23/efm32pg23_fix", features = ["critical-section", "rt"]}
embedded-alloc = "0.5.0" # embedded-alloc required nightly!
embedded-graphics = "0.7.1"
kampela-system = { path = "../kampela-system" }
kampela-ui = { path = "../kampela-ui" , default-features = false }
lazy_static = { version = "1.4.0", default-features = false, features = ["spin_no_std"]}
nalgebra = { version = "0.32.2", default-features = false, features = ["libm"] }
nfca-parser = { git = "https://github.com/Alzymologist/NfcA-parser", default-features = false }

[profile.release]
codegen-units = 1
lto = true
